--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,14 @@ body {
 }
 
 .container {
-  max-width: 500px;
+  max-width: 400px;
+  max-height: 600px;
   margin: auto;
+  background-color: rgb(11, 94, 94);
+  border-radius: 10px;
 }
 
-.display{
+.display {
   display: block;
   margin: 0 auto;
 }
@@ -17,4 +20,10 @@ body {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(4, 1fr);
+  padding: 5px;
+}
+
+.buttons-container button {
+  background-color: rgba(11, 94, 94, 0);
+  width: 50px;
 }
