--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,46 @@
+* {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
 body {
   margin: 0px;
   padding: 0px;
 }
 
 .container {
-  max-width: 400px;
-  max-height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  width: 400px;
   margin: auto;
-  background-color: rgb(11, 94, 94);
-  border-radius: 10px;
+  border-radius: 15px;
+
+  background-color: #005073;
 }
 
 .display {
-  display: block;
-  margin: 0 auto;
+  width: 350px;
+  text-align: right;
+  font-size: 50px;
+  border-radius: 10px;
+  border: rgb(150, 150, 150) solid;
+  background-color: #219609;
 }
 
 .buttons-container {
   display: grid;
-  width: 100%;
+  gap: 5px;
   grid-template-columns: repeat(4, 1fr);
-  padding: 5px;
+  width: 400px;
+  height: 400px;
+  margin-top: 30px;
 }
 
 .buttons-container button {
-  background-color: rgba(11, 94, 94, 0);
-  width: 50px;
+  border-radius: 40%;
+  font-size: 30px;
+}
+
+.number-value {
 }
