--- a/styles.css
+++ b/styles.css
@@ -26,17 +26,18 @@ a {
   flex-direction: column;
   align-items: center;
   padding: 10px;
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
   margin: auto;
   border-radius: 15px;
-
   background-color: #005073;
 }
 
 .display {
-  width: 350px;
+  width: 100%;
+  max-width: 350px;
   text-align: right;
-  font-size: 50px;
+  font-size: 4em;
   border-radius: 10px;
   border: rgb(150, 150, 150) solid;
   background-color: #219609;
@@ -46,15 +47,16 @@ a {
   display: grid;
   gap: 5px;
   grid-template-columns: repeat(4, 1fr);
-  width: 400px;
-  height: 400px;
+  max-width: 400px;
+  width: 100%;
   margin-top: 30px;
+  height: 400px;
 }
 
 button {
   border-radius: 50px;
   border: black solid;
-  font-size: 30px;
+  font-size: 2em;
   cursor: pointer;
 }
 
