--- a/styles.css
+++ b/styles.css
@@ -91,3 +91,32 @@ button {
 .function-clear:active {
   background-color: rgb(255, 81, 0);
 }
+
+@media screen and (max-width: 768px) {
+  
+  * {
+    overflow: hidden;
+  }
+
+  h1, h3 {
+    font-size: 2em;
+  }
+
+  .container{
+    width: 100%;
+    height: 100vh;
+    border-radius: 0px;
+  }
+
+  .display {
+    margin-top: 50px;
+    width: 280px;
+    font-size: 4em;
+  }
+
+  .buttons-container{
+    max-width:300px;
+  }
+
+
+}
