--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 * {
   font-family: "Oswald", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -30,6 +32,7 @@ a {
   width: 100%;
   margin: auto;
   border-radius: 15px;
+  border: solid 5px;
   background-color: #005073;
 }
 
@@ -41,6 +44,7 @@ a {
   border-radius: 10px;
   border: rgb(150, 150, 150) solid;
   background-color: #219609;
+  color: rgb(0, 32, 4);
 }
 
 .buttons-container {
@@ -58,6 +62,7 @@ button {
   border: black solid;
   font-size: 2em;
   cursor: pointer;
+  color: black;
 }
 
 .number-value:hover {
@@ -93,17 +98,17 @@ button {
 }
 
 @media screen and (max-width: 768px) {
-  
   * {
     overflow: hidden;
   }
 
-  h1, h3 {
+  h1,
+  h3 {
     display: none;
   }
 
-  .container{
-    width: 100%;
+  .container {
+    width: 100vh;
     height: 100vh;
     border-radius: 0px;
   }
@@ -114,9 +119,7 @@ button {
     font-size: 4em;
   }
 
-  .buttons-container{
-    max-width:300px;
+  .buttons-container {
+    max-width: 300px;
   }
-
-
 }
